--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -25,7 +25,7 @@ body {
 }
 #main {
     text-align: center;
-    margin: 30px 10px 20px 10px;
+    margin: 10px 10px 20px 10px;
     background-image: linear-gradient(to right, #becfbe, #f8f8f8, #becfbe);
     border-radius: 5px;
 }
@@ -33,7 +33,6 @@ body {
 #image {
     display: block;
     margin: 20px auto 10px auto;
-    background-color: white;
     width: 90%;
     max-width: 900px;
     height: auto;
@@ -65,6 +64,8 @@ ul {
     max-width: 550px;
     margin: 0px auto 20px auto;
     text-align: left;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 li {
@@ -76,11 +77,13 @@ ol {
 }
 
 #tribute-info {
-    margin: 0px 50px 0px 50px;
+    margin: 0px 20px 0px 20px;
     border-width: 1px;
     border-radius: 5px;
     border-style: solid;
     padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .wiki {
@@ -139,7 +142,7 @@ hr {
 </div>
 <hr>
 <div class="wiki">
-<h6><strong>If you want to know more about this topic, <a id="tribute-link" href="https://en.wikipedia.org/wiki/User_story" target="_blank">click here!</a></strong></h5>
+<h6><strong>If you want to know more <br> <a id="tribute-link" href="https://en.wikipedia.org/wiki/User_story" target="_blank">click here!</a></strong></h5>
 </div>
 </div>
 
