--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -103,6 +103,17 @@ hr {
     color: rgb(247, 86, 81);
 }
 
+.cart-link {
+    text-decoration: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
 </style>
 
 <body>
@@ -144,6 +155,7 @@ hr {
 <div class="wiki">
 <h6><strong>If you want to know more <br> <a id="tribute-link" href="https://en.wikipedia.org/wiki/User_story" target="_blank">click here!</a></strong></h5>
 </div>
+<button class="cart-link"> <a href="/cart">Next page</a> </button>
 </div>
 
 </body>
