--- a/base/templates/base/Portfolio.html
+++ b/base/templates/base/Portfolio.html
@@ -113,6 +113,7 @@
             align-items: center;
             color: #ffffff;
             transition: all .5s ease-in-out;
+            cursor: pointer;
         }
 
         
@@ -176,6 +177,7 @@
         align-items: center;
         text-align: center;
         transition: all .5s ease-in-out;
+        cursor: pointer;
         }
 
 
@@ -236,7 +238,7 @@
         /*============= Media query ===============*/
         @media(min-width: 400px){
         .nav-content .logo{
-            width: 20%;
+            width: 70%;
         }
         }
         @media (min-width: 600px){
@@ -244,7 +246,7 @@
             font-size: 18px;
         }
         .nav-content ul li a{
-            padding: 20px;
+            padding: 15px;
         }
         .nav-content ul li a:hover {
             background-color: #000;
@@ -259,6 +261,9 @@
         @media (min-width: 900px){
         #projects .cards {
             grid-template-columns: 1fr 1fr 1fr;
+        }
+        .nav-content .logo{
+            width: 20%;
         }
 
         #welcome-section:hover{
@@ -284,7 +289,7 @@
             p {
                 font-size: 12px;
             }
-        }
+            }
 
     </style>
 </head>
@@ -350,7 +355,7 @@
                 <figcaption>Weather App</figcaption>
               </a>
               
-              <a class="card" href="#" target="_blank">
+              <a class="card" href="https://codepen.io/IncreaseNick/full/MWOvPdZ" target="_blank">
                 <img src="https://i.ibb.co/KhChvTT/calc.jpg" alt="DwinaTech portfolio" />
                 <figcaption>Simple Calculator</figcaption>
               </a>
@@ -368,7 +373,7 @@
         <li><a id="profile-link" target="_blank" href="https://github.com/Increase12345"><i class="fa fa-github"></i> <br> Github</a></li>
         <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100005996760405"><i class="fa fa-facebook"></i> <br> Facebook</a></li>
         <li><a target="_blank" href="https://www.instagram.com/k0li4ka/"><i class="fa fa-instagram"></i> <br> k0li4ka</a></li>
-        <li><a id="profile-link" target="_blank" href="https://github.com/Increase12345"><i class="fa fa-at"></i> <br> Send a mail</a></li>
+        <li><a id="profile-link" target="_blank" href="mailto:iamdjpavlov@gmail.com"><i class="fa fa-at"></i> <br> Send a mail</a></li>
         <br>
       </ul>
     </div>
