--- a/base/templates/base/Portfolio.html
+++ b/base/templates/base/Portfolio.html
@@ -173,7 +173,7 @@
         #contact {
         color: #fff;
         display: flex;
-        min-height: 80vh;
+        min-height: 90vh;
         align-items: center;
         text-align: center;
         transition: all .5s ease-in-out;
@@ -284,7 +284,7 @@
                 font-size: 30px;
             }
             h2 {
-                font-size: 22px;
+                font-size: 30px;
             }
             p {
                 font-size: 12px;
@@ -301,7 +301,7 @@
     <div class="container">
         <div class="nav-content">
             <div class="logo">
-                <img src="https://i.ibb.co/tLjvsQr/logo-sm.png" alt="nick-logo">
+                <img src="https://i.ibb.co/r0XxPfz/logo3.png" alt="nick-logo">
             </div>
             <ul>
                 <li><a href="#welcome-section">About</a></li>
@@ -315,7 +315,7 @@
 <section id="welcome-section">
     <div class="container">
         <h1>Hey I am Nick</h1>
-        <p><em>a web developer</em></p>
+        <p>a web developer</p>
     </div>
 </section>
 
@@ -368,7 +368,7 @@
 <section id="contact">
     <div class="container">
       <h2 class="project-tile">Let us get in touch</h2>
-      <p><em>You can reach me through flowing links</em><p>
+      <p>You can reach me through flowing links<p>
       <ul>
         <li><a id="profile-link" target="_blank" href="https://github.com/Increase12345"><i class="fa fa-github"></i> <br> Github</a></li>
         <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100005996760405"><i class="fa fa-facebook"></i> <br> Facebook</a></li>
@@ -382,7 +382,7 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <p>Copyright &copy; 2022 Nick Pavlov. All rights Reserved</p>
+        <p><span style="color: white;">Copyright &copy; 2022 Nick Pavlov. All rights Reserved</span></p>
       </div>
     </div>
   </footer>
