--- a/base/templates/base/Portfolio.html
+++ b/base/templates/base/Portfolio.html
@@ -57,6 +57,7 @@
             right: 0;
             border-bottom: 1px solid #000;
             z-index: 5;
+            box-shadow: 0 5px 5px -1px rgba(0,0,0,.2);
         }
         
         .nav-content {
@@ -329,11 +330,11 @@
                      src="https://i.ibb.co/M85S4WM/cart.jpg" />
                 <figcaption>Cart Form</figcaption>
               </a>
-              <a class="card" href="https://codepen.io/IncreaseNick/full/eYegdqY" target="_blank">
+              <a class="card" href="http://inctodoapp.pythonanywhere.com/login/?next=/" target="_blank">
                 <img 
                      alt="Tribute page project"
-                     src="https://i.ibb.co/2drgjP7/tri.jpg"  />
-                <figcaption>Tribute page</figcaption>
+                     src="https://i.ibb.co/qyqbVsq/t2.jpg"  />
+                <figcaption>To Do App</figcaption>
               </a>
         
               <a class="card" href="https://codepen.io/IncreaseNick/full/BamdzNx" target="_blank">
@@ -370,9 +371,9 @@
       <h2 class="project-tile">Let us get in touch</h2>
       <p>You can reach me through flowing links<p>
       <ul>
-        <li><a id="profile-link" target="_blank" href="https://github.com/Increase12345"><i class="fa fa-github"></i> <br> Github</a></li>
+        <li><a id="profile-link" target="_blank" href="https://github.com/Increase12345"><i class="fa fa-github"></i> <br> GitHub</a></li>
         <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100005996760405"><i class="fa fa-facebook"></i> <br> Facebook</a></li>
-        <li><a target="_blank" href="https://www.instagram.com/k0li4ka/"><i class="fa fa-instagram"></i> <br> k0li4ka</a></li>
+        <li><a target="_blank" href="https://www.instagram.com/k0li4ka/"><i class="fa fa-instagram"></i> <br> Instagram</a></li>
         <li><a id="profile-link" target="_blank" href="mailto:iamdjpavlov@gmail.com"><i class="fa fa-at"></i> <br> Send a mail</a></li>
         <br>
       </ul>
